--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <div>
       <label for="customname">Enter custom name:</label>
-      <input id="customname" type="text" placeholder="">
+      <input id="customname" type="text" placeholder="ex. Bob">
     </div>
     <div>
       <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked>
